优化语速  清晰度   网络状态  清晰度切换还需要优化

--- a/css/Dvideo.css
+++ b/css/Dvideo.css
@@ -342,7 +342,83 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-playbackRate:hover {
   background: #F29A4D;
 }
-/* line 171, ../sass/Dvideo/_ctrl.scss */
+/* line 169, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition {
+  color: #787d82;
+  width: 35px;
+  height: 18px;
+  line-height: 13px;
+  text-align: center;
+  vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  font-size: 12px;
+  margin: 0 10px;
+  padding: 2px 4px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  background: #787d82;
+  cursor: pointer;
+  position: relative;
+  -moz-transition: background 0.3s;
+  -o-transition: background 0.3s;
+  -webkit-transition: background 0.3s;
+  transition: background 0.3s;
+}
+/* line 186, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition .Dvideo-definitionText {
+  width: 100%;
+  height: 100%;
+  color: #070C11;
+}
+/* line 191, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition .Dvideo-definition-content {
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  background: #070C11;
+  padding-bottom: 10px;
+  width: 60px;
+  height: auto;
+  left: 50%;
+  z-index: 3;
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+}
+/* line 202, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition .Dvideo-definition-content.active {
+  display: block;
+}
+/* line 205, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition .Dvideo-definition-content .Dvideo-definition-list {
+  display: block;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  color: #787d82;
+}
+/* line 211, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition .Dvideo-definition-content .Dvideo-definition-list.active {
+  color: #F29A4D;
+}
+/* line 214, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition .Dvideo-definition-content .Dvideo-definition-list:hover {
+  background: #1F2429;
+}
+/* line 219, ../sass/Dvideo/_ctrl.scss */
+.Dvideo-ctrl .Dvideo-detail .Dvideo-menu-right-content .Dvideo-definition:hover {
+  background: #F29A4D;
+}
+/* line 225, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content {
   height: 2px;
   width: 100%;
@@ -352,12 +428,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   background: #333;
   z-index: 2;
 }
-/* line 179, ../sass/Dvideo/_ctrl.scss */
+/* line 233, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-progress-detail {
   height: 100%;
   width: 100%;
 }
-/* line 182, ../sass/Dvideo/_ctrl.scss */
+/* line 236, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-progress-detail .Dvideo-progress-buffered {
   width: 0;
   height: 100%;
@@ -370,7 +446,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transition: width 0.3s;
   transition: width 0.3s;
 }
-/* line 191, ../sass/Dvideo/_ctrl.scss */
+/* line 245, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-progress-detail .Dvideo-progress-real {
   width: 0%;
   height: 100%;
@@ -381,7 +457,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transition: width 0.3s;
   transition: width 0.3s;
 }
-/* line 199, ../sass/Dvideo/_ctrl.scss */
+/* line 253, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-circle-range {
   display: none;
   position: absolute;
@@ -395,7 +471,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 209, ../sass/Dvideo/_ctrl.scss */
+/* line 263, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content .Dvideo-circle-range:after {
   content: '';
   position: absolute;
@@ -412,22 +488,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-/* line 221, ../sass/Dvideo/_ctrl.scss */
+/* line 275, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content.active {
   height: 4px;
 }
-/* line 224, ../sass/Dvideo/_ctrl.scss */
+/* line 278, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content.active .Dvideo-progress-detail .Dvideo-progress-real {
   -moz-transition: none;
   -o-transition: none;
   -webkit-transition: none;
   transition: none;
 }
-/* line 228, ../sass/Dvideo/_ctrl.scss */
+/* line 282, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-progress-content.active .Dvideo-circle-range {
   display: block;
 }
-/* line 233, ../sass/Dvideo/_ctrl.scss */
+/* line 287, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-ctrl .Dvideo-tips-info {
   position: absolute;
   left: 0;
@@ -441,7 +517,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-size: 12px;
 }
 
-/* line 247, ../sass/Dvideo/_ctrl.scss */
+/* line 301, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-header {
   position: absolute;
   top: 0;
@@ -459,13 +535,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   opacity: 0;
   visibility: hidden;
 }
-/* line 259, ../sass/Dvideo/_ctrl.scss */
+/* line 313, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-header.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   visibility: visible;
 }
-/* line 264, ../sass/Dvideo/_ctrl.scss */
+/* line 318, ../sass/Dvideo/_ctrl.scss */
 .Dvideo-header .Dvideo-header-title {
   width: 80%;
   height: 100%;
