--- a/sass/Dvideo/_ctrl.scss
+++ b/sass/Dvideo/_ctrl.scss
@@ -166,6 +166,60 @@
 					background: $primary_color;
 				}
 			}
+			.Dvideo-definition{
+				color: $icon_color;
+				width: 35px;
+				height: 18px;
+			    line-height: 13px;
+				text-align: center;
+				vertical-align: middle;
+				@include inline-block;
+				font-size: 12px;
+				margin: 0 10px;
+				padding: 2px 4px;
+				@include box-sizing(border-box);
+				@include border-radius(2px);
+				background: $icon_color;
+				cursor: pointer;
+				position:relative;
+				@include transition(background 0.3s);
+				.Dvideo-definitionText{
+					width: 100%;
+					height: 100%;
+					color: $ctrl_bg;
+				}
+				.Dvideo-definition-content{
+					display: none;
+					position: absolute;
+					bottom: 100%;
+					background:$ctrl_bg;
+					padding-bottom: 10px;
+					width: 60px;
+					height: auto;
+					left: 50%;
+					z-index: 3;
+					@include translate(-50%,0);
+					&.active{
+						display: block;
+					}
+					.Dvideo-definition-list{
+						display: block;
+						width: 100%;
+						height: 30px;
+						line-height: 30px;
+						color: $icon_color;
+						&.active{
+							color: $primary_color;
+						}
+						&:hover{
+							background: $rate_hover_color;
+						}
+					}
+				}
+				&:hover{
+					background: $primary_color;
+				}
+			}
 		}
 	}
 	.Dvideo-progress-content{
