还原keydown的冒泡问题

--- a/sass/Dvideo/_ctrl.scss
+++ b/sass/Dvideo/_ctrl.scss
@@ -385,6 +385,8 @@
 			background: transparent;
 			color: #fff;
 		    font-size: 12px;
+		    padding: 0 5px;
+		    @include box-sizing(border-box);
 		}
 	}
 
