优化显示关闭菜单的方法  页面加载时候提示用户加载信息

--- a/sass/Dvideo/_content.scss
+++ b/sass/Dvideo/_content.scss
@@ -19,7 +19,7 @@
 	// @include display-flex;
 	.Dvideo-ele{
 		width: 100%;
-		height: auto;
+		height: 100%;
 		position: absolute;
 		top: 50%;
 		left: 50%;
