--- a/sass/Dvideo/_global.scss
+++ b/sass/Dvideo/_global.scss
@@ -16,7 +16,8 @@ $header_height: 36px;
 // ==  控制条栏
 $ctrl_height: 40px;
 // 背景色
-$ctrl_bg: #070C11;
+// $ctrl_bg: #070C11;
+$ctrl_bg: rgba(7,12,17,0.8);
 $padding_leftright: 8px;
 
 // 进度条信息
